done with microsite correction n spacing

--- a/assets/property/templates/shaper_resort/css/templatec619.css
+++ b/assets/property/templates/shaper_resort/css/templatec619.css
@@ -5549,7 +5549,7 @@ label {
 }
 
 #section-id-1507611922 {
-    padding-top: 80px;
+    padding-top: 25px;
     /*padding-bottom: 80px;*/
 }
 
